gh-pages branch

--- a/TODO
+++ b/TODO
@@ -3,13 +3,16 @@ Kenmore Hackathon
 Possible Idea:
 
   + Allow businesses to make better decision on whether they should move to the area or not.
+
   + Platform to invite people work for open project assigned randomly by the City
 
 LAB's intro:
-  + Great day
-	+ I am a hackathon addict. For the past 2 years studying as an International Student at the States, I was able to attend more than 20 hackathons.
 
-LAB's 1st story:
+  + Great day
+
+  + I am a hackathon addict. For the past 2 years studying as an International Student at the States, I was able to attend more than 20 hackathons.
+
+LAB's story:
 
 	+ Most of them, was organized in Seattle.
 
@@ -21,9 +24,6 @@ LAB's 1st story:
   + Furthermore, I think people are more willing to do something if they don't have to worry about the prior process, e.g being grouped together. I want them to be worry about the project, not the team. Team need time to build, and if they love the project, they will have people in that.
 	+ However, when the city need something solved, people rarely want to solve it unless it is something necessary.
 	+ Introducing
-
-LAB's 2nd story:
-
 
 Dataset:
 	+ Identification | Fill-out form | Volunteer List | Developer List | Student
