Added main page which will navigate to the main tab

--- a/TODO
+++ b/TODO
@@ -25,6 +25,12 @@ LAB's story:
 	+ However, when the city need something solved, people rarely want to solve it unless it is something necessary.
 	+ Introducing
 
+LAB's mindframe:
+  + Userflow : A question on the front-page
+    + Would you like to help Kenmore ? YES
+    + Random project asgined, here are your colaborators.
+
+
 Dataset:
 	+ Identification | Fill-out form | Volunteer List | Developer List | Student
 	+ City project List |
